# dotfiles

./: DEVELOPMENT.md  README.md
dotfiles/: .chezmoi.toml.tmpl  ansible.cfg.tmpl  dot_ansible.cfg.tmpl  dot_bashrc.tmpl  dot_zshrc.tmpl  run_onchange_linux-install-packages.sh.tmpl
dotfiles/.chezmoidata/: packages.yaml
dotfiles/.chezmoiscripts/: run_after_30-install-gh.sh.tmpl  run_after_40-install-fx.sh.tmpl  run_after_40-install-fzf.sh.tmpl  run_after_40-install-lazydocker.sh.tmpl  run_after_40-install-rbw.sh.tmpl  run_after_40-install-sops.sh.tmpl  run_after_40-install-uv.sh.tmpl  run_after_40-install-vivid.sh.tmpl  run_after_50-install-ansible.sh.tmpl  run_before_add-terraform-apt-repo.sh.tmpl  run_once_after_install.sh.tmpl  run_onchange_linux-install-packages.sh.tmpl
dotfiles/.chezmoitemplates/: lib_github_release_installer.bash
dotfiles/dot_config/dotfile_source/: 000-exports.sh.tmpl  000-path.sh.tmpl  001-options.bash.tmpl  001-options.zsh.tmpl  001-plugins.zsh.tmpl  010-exports.sh.tmpl  060-aliases.sh.tmpl  060-functions.sh.tmpl  10-path.sh.tmpl  30-prompt.sh  30-prompt.sh.tmpl
dotfiles/dot_config/git/: config.tmpl
dotfiles/dot_config/oh-my-posh/: config.toml
dotfiles/dot_config/starship/: starship.toml
dotfiles/tools/ansible/: pyproject.toml
dotfiles/tools/ansible-2.9/: pyproject.toml
dotfiles/tools/ansible-latest/: pyproject.toml
