[project]
name = "ansible-2-9-venv"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ansible==2.9.27",
    "ansible-lint<6",
    "ansible-modules-hashivault==4.6.3",
    "cachetools>=2.0.0,<6.0",
    "dnspython>=2.8.0",
    "google-auth==2.22.0",
    "hvac==1.1.0",
    "jc>=1.25.6",
    "jmespath>=0.10.0",
    "netaddr>=1.3.0",
    "pyasn1>=0.4.6,<0.6.0",
    "pyasn1-modules>=0.2.1",
    "pyzabbix>=1.3.0",
    "rich<11",
    "rsa>=3.1.4,<5",
    "six>=1.9.0",
    "urllib3<2.0",
    "wcmatch>=10.1",
    "zabbix-api>=0.5.4",
]
