[project]
name = "ansible-latest-venv"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ansible<12",
    "ansible-core<2.19",
    "ansible-dev-tools>=25.5.2",
    "ansible-lint>=25.5.0",
    "argcomplete>=3.6.2",
    "dnspython>=2.8.0",
    "hvac>=2.4.0",
    "ipaddr>=2.2.0",
    "jc>=1.25.6",
    "jmespath>=1.0.1",
    "mitogen>=0.3.23",
    "netaddr>=1.3.0",
    "passlib>=1.7.4",
    "pyzabbix>=1.3.1",
    "wcmatch>=10.0",
    "zabbix-api>=0.5.6",
]
